--- a/mission-2022-main/index.html
+++ b/mission-2022-main/index.html
@@ -6,13 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allah-Vhorosa</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:ital,wght@0,300;0,400;1,400&family=Luxurious+Roman&family=Merriweather:wght@400;700;900&family=Poppins&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Stay Focused On</h1>
-    <h1>Mission 2022</h1>
-
+    <section class="back-shape">
+        <div class="cobi-leka">
+            <h1>Stay Focused On</h1>
+            <h1><span>Mission 2022</span></h1>
+            <p>I have started the mission of becoming a developer from 2022.
+                Hopefully by sticking with the Programming Hero,as well as working
+                hard,i will continue my mission as a Web Developer.
+            </p>
+            <a class="explore-button" target="_blank" href="">Explore Now</a>
+        </div>
+        <div class="cobi-leka">
+            <img src="images/person/person-4.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
