second part added"

--- a/mission-2022-main/index.html
+++ b/mission-2022-main/index.html
@@ -25,10 +25,37 @@
                 hard,i will continue my mission as a Web Developer.
             </p>
             <a class="explore-button" target="_blank" href="">Explore Now</a>
+            <h3>Check back below for more details about me</h3>
+
         </div>
         <div class="cobi-leka">
             <img src="images/person/person-4.png" alt="">
         </div>
+    </section>
+
+    <section class="section">
+        <div>
+            <h1>My Mission in <span>2022</span></h1>
+            <div class="xyz">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h2>Mission</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, quas.</p>
+            </div>
+            <div class="dvd">
+                <img src="images/illustrators/illustrator-2.png" alt="">
+                <h2>Vission</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, vel!</p>
+            </div>
+            <div class="bcd">
+                <img src="images/illustrators/illustrator-3.png" alt="">
+                <h2>Goals</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, modi?Lorem ipsum
+                </p>
+            </div>
+
+        </div>
+
+
     </section>
 </body>
 
