--- a/mission-2022-main/index.html
+++ b/mission-2022-main/index.html
@@ -18,8 +18,10 @@
 <body>
     <section class="back-shape">
         <div class="cobi-leka">
-            <h1>Stay Focused On</h1>
-            <h1><span>Mission 2022</span></h1>
+            <div id="border">
+                <h1>Stay Focused On</h1>
+                <h1><span>Mission 2022</span></h1>
+            </div>
             <p>I have started the mission of becoming a developer from 2022.
                 Hopefully by sticking with the Programming Hero,as well as working
                 hard,i will continue my mission as a Web Developer.
@@ -32,10 +34,13 @@
             <img src="images/person/person-4.png" alt="">
         </div>
     </section>
+    <h1 id="moddom">My Mission in <span>2022</span></h1>
 
     <section class="section">
-        <div>
-            <h1>My Mission in <span>2022</span></h1>
+
+
+        <div id="second-part">
+
             <div class="xyz">
                 <img src="images/illustrators/illustrator-1.png" alt="">
                 <h2>Mission</h2>
@@ -52,6 +57,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, modi?Lorem ipsum
                 </p>
             </div>
+
 
         </div>
 
