fourth part added

--- a/mission-2022-main/index.html
+++ b/mission-2022-main/index.html
@@ -63,6 +63,22 @@
 
 
     </section>
+    <section class="back-ground">
+        <div class="dis-flex">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="nadim">
+            <h1>Develop</h1>
+            <h1>Without Limits</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam est incidunt iste quaerat, unde molestiae
+                ab
+                magnam veniam facere! Quisquam placeat, aperiam laudantium dolor accusantium sit ipsa ea inventore
+                incidunt
+                repellendus cumque nihil provident corporis. Cum ab atque a laudantium?</p>
+            <a class="explore-button" target="_blank" href="">Read the Documentation</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
