fifth part added

--- a/mission-2022-main/index.html
+++ b/mission-2022-main/index.html
@@ -79,6 +79,19 @@
         </div>
 
     </section>
+    <section class="fifth">
+        <div class="slow">
+            <h1>Know Our</h1>
+            <h1>Global Community</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et dignissimos fugit praesentium perspiciatis
+                sunt architecto ab maiores nulla. Delectus saepe distinctio asperiores earum mollitia dolorum et
+                assumenda rerum nesciunt voluptatem.</p>
+            <a class="explore-button" target="_blank" href="">Read the Documentation</a>
+        </div>
+        <div>
+            <img src="images/pictures/project.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
