--- a/mission-2022-main/index.html
+++ b/mission-2022-main/index.html
@@ -92,6 +92,19 @@
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
+    <section class="ahmed">
+        <div class="last">
+            <img src="images/person/cm-2.jpg" alt="">
+        </div>
+        <div class="least">
+            <h1>A Smart Job</h1>
+            <h1>Web Developer</h1>
+            <p>The whole World is dependent on technology.There in no sunstitute for website development to keep pace
+                with the modern technology dependent world.This profession has become popular with most of the people of
+                the world as a modern standard profession.</p>
+            <a class="explore-button" target="_blank" href="">Read More</a>
+        </div>
+    </section>
 </body>
 
 </html>
