--- a/mission-2022-main/index.html
+++ b/mission-2022-main/index.html
@@ -44,18 +44,18 @@
             <div class="xyz">
                 <img src="images/illustrators/illustrator-1.png" alt="">
                 <h2>Mission</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, quas.</p>
+                <p>Programming Hero Learning.</p>
             </div>
             <div class="dvd">
                 <img src="images/illustrators/illustrator-2.png" alt="">
                 <h2>Vission</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, vel!</p>
+                <p>For now,Compleate Web developement course With Jhankar Mahbub Sir </p>
             </div>
             <div class="bcd">
                 <img src="images/illustrators/illustrator-3.png" alt="">
                 <h2>Goals</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, modi?Lorem ipsum
-                </p>
+                <p>Being a good quality professional Web Developer </p>
+
             </div>
 
 
@@ -105,6 +105,15 @@
             <a class="explore-button" target="_blank" href="">Read More</a>
         </div>
     </section>
+
+    <section>
+
+    </section>
+    <div class="foooter">
+        <h1 id="footerr">MISSION <span>2022</span></h1>
+        <footer id="footer">Hard work, Perseverance, and Determination for 2022</footer>
+    </div>
+
 </body>
 
 </html>
