all right added

--- a/mission-2022-main/index.html
+++ b/mission-2022-main/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allah-Vhorosa</title>
+    <title>Assignment-one</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <section class="back-shape">
-        <div class="cobi-leka">
+    <section class="focoused">
+        <div class="pic-text">
             <div id="border">
                 <h1>Stay Focused On</h1>
                 <h1><span>Mission 2022</span></h1>
@@ -30,13 +30,13 @@
             <h3>Check back below for more details about me</h3>
 
         </div>
-        <div class="cobi-leka">
+        <div class="pic-text">
             <img src="images/person/person-4.png" alt="">
         </div>
     </section>
     <h1 id="moddom">My Mission in <span>2022</span></h1>
 
-    <section class="section">
+    <section class="mission-vission">
 
 
         <div id="second-part">
@@ -63,40 +63,37 @@
 
 
     </section>
-    <section class="back-ground">
+    <section class="develop">
         <div class="dis-flex">
             <img src="images/pictures/coding.png" alt="">
         </div>
-        <div class="nadim">
+        <div class="lorem">
             <h1>Develop</h1>
             <h1>Without Limits</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam est incidunt iste quaerat, unde molestiae
-                ab
-                magnam veniam facere! Quisquam placeat, aperiam laudantium dolor accusantium sit ipsa ea inventore
-                incidunt
-                repellendus cumque nihil provident corporis. Cum ab atque a laudantium?</p>
+            <p>Development Without Limits’ strategic vision and attention to detail were key to our project’s
+                success—that, and our shared commitment to developing and strengthening the afterschool profession.</p>
             <a class="explore-button" target="_blank" href="">Read the Documentation</a>
         </div>
 
     </section>
-    <section class="fifth">
-        <div class="slow">
+    <section class="global">
+        <div class="know">
             <h1>Know Our</h1>
             <h1>Global Community</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et dignissimos fugit praesentium perspiciatis
-                sunt architecto ab maiores nulla. Delectus saepe distinctio asperiores earum mollitia dolorum et
-                assumenda rerum nesciunt voluptatem.</p>
+            <p>Working together to save lives, advance equity and secure strong futures.Global Communities works at the
+                intersection of humanitarian assistance, sustainable development and financial inclusion to save lives,
+                advance equity and secure strong futures.</p>
             <a class="explore-button" target="_blank" href="">Read the Documentation</a>
         </div>
         <div>
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
-    <section class="ahmed">
-        <div class="last">
+    <section class="smart">
+        <div class="last-img">
             <img src="images/person/cm-2.jpg" alt="">
         </div>
-        <div class="least">
+        <div class="web">
             <h1>A Smart Job</h1>
             <h1>Web Developer</h1>
             <p>The whole World is dependent on technology.There in no sunstitute for website development to keep pace
